# canopie-client-themes

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  diesel.toml  package.json
.gemini/: sandbox.Dockerfile
ALPHA/: Cargo.toml  package.json  test.ts  tsconfig.json  update_schema.sh
ALPHA/scripts/: new_theme.ts  tailwind_build.ts
ALPHA/scripts/templates/theme/: Cargo.toml  Makefile
ALPHA/scripts/templates/theme/src/: main.rs
ALPHA/src/: config.rs  db.rs  lib.rs  main.rs  renderer.rs
ALPHA/src/components/: image_selector.rs  mod.rs  video.rs
ALPHA/src/config/: data_type.rs  inputs.rs  macro.rs  mod.rs  test.rs  theme.rs
ALPHA/src/dev/: mod.rs  renderer.rs  response.rs  run.rs
ALPHA/src/resource/: mod.rs
ALPHA/src/types/: tiptap.rs
ALPHA/src/utils/: mod.rs
ALPHA/static/javascript/: fish.js  hello.js  spa.js  test.js  youtube.js
base/src/: lib.rs  models.rs  renderer.rs  schema.rs
base/src/components/: doc.rs  mod.rs  prose.rs
base/src/types/: mod.rs
base/src/utils/: mod.rs
crates/atlas/: Cargo.toml
crates/atlas/src/: lib.rs  main.rs
crates/atlas/src/templates/: mod.rs  not_found.rs  page.rs
crates/atlas/static/styles/: atlas.css
crates/morningstar/: Cargo.toml
crates/morningstar/.zed/: settings.json
crates/morningstar/frontend/scripts/: spa.ts
crates/morningstar/frontend/styles/: border-component.css  contact.css  deco-cd.css  index.css  liminal-zone.css  menu.css  page-band.css
crates/morningstar/src/: lib.rs  main.rs  sections.rs
crates/morningstar/src/components/: album_cover.rs  mod.rs  video.rs
crates/morningstar/src/templates/: mod.rs  single.rs  spa.rs
crates/morningstar/static/scripts/: fish.js  observe.js  spa.js
crates/morningstar/static/styles/: index.css  page-band.css  tailwind.css
morningstar/: Cargo.toml  Makefile  package.json
morningstar/frontend/javascript/: observe.ts  spa.ts
morningstar/frontend/scripts/: fish.ts  header-rotation.ts
morningstar/frontend/styles/: home.css  menu.css  page-band.css  single-page.css
morningstar/src/: lib.rs  main.rs  mod.rs  sections.rs  templates.rs
morningstar/src/components/: album_cover.rs  bordered.rs  video.rs
morningstar/src/templates/: not_found.rs  single.rs  spa.rs
morningstar/static/javascript/: fish.js  header-rotation.js  observe.js  spa.js
morningstar/static/scripts/: header-rotation.js  spa.js
morningstar/static/styles/: border-component.css  contact.css  deco-cd.css  home.css  index.css  liminal-zone.css  menu.css  page-band.css  single-page.css  tailwind.css
reference/: models.rs  schema.rs
scripts/: new_theme.ts  typescript_build.ts
scripts/types/: watchexec.ts
scripts/utils/: template.ts
src/: header.rs  lib.rs  main.rs  renderer.rs
