[workspace]

[package]
name = "canopie-themes"
version = "0.2.4"
edition = "2024"
publish = ["canopie"]

[workspace.dependencies]
canopie-themes-morningstar = { version = "0.1.7", path = "crates/morningstar", registry = "canopie" }

[dependencies]
canopie-themes-morningstar.workspace = true
canopie-utils = { path = "../canopie-utils", registry = "canopie", version = "0.2.4" }
utoipa = { version = "5.4.0", optional = true }

[features]
embed = ["canopie-themes-morningstar/embed", "canopie-utils/embed"]
utoipa = ["dep:utoipa"]
