[workspace]

[package]
name = "canopie-themes"
version = "0.2.6"
edition = "2024"
publish = ["canopie"]

[workspace.dependencies]
canopie-themes-morningstar = { version = "0.1.7", path = "crates/morningstar", registry = "canopie" }
canopie-themes-atlas = { version = "0.1.0", path = "crates/atlas", registry = "canopie" }

[dependencies]
canopie-themes-morningstar.workspace = true
canopie-themes-atlas.workspace = true
canopie-utils = { path = "../canopie-utils", registry = "canopie", version = "0.2.4" }
# canopie-utils = { registry = "canopie", version = "0.2.4" }
utoipa = { version = "5.4.0", optional = true }

[features]
embed = ["canopie-themes-morningstar/embed", "canopie-themes-atlas/embed", "canopie-utils/embed"]
utoipa = ["dep:utoipa"]
