[package]
name = "canopie-client-utils"
version = "0.1.2"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
# Database & ORM
diesel = { version = "2.3", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
    "serde_json",
] }
maud = "0.27.0"
schemars = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
utoipa = "5.4.0"
regex = "1.12.2"
dotenvy = "0.15.7"
libvips = "1.7.1"
actix-cors = "0.7.1"
actix-files = "0.6.9"
canopie-utils = "0.1.3"
mime_guess = "2.0.5"
anyhow = "1.0.100"
rust-embed = {version = "8.9.0", optional = true}
include_dir = "0.7.4"

[features]
default = []
embed = ["dep:rust-embed"]
