[package]
name = "canopie-client-theme-morningstar"
version = "0.1.0"
edition = "2024"

[dependencies]
canopie-client-utils = { path = "../ALPHA", features = [] }
# canopie-client-theme-base = { git = "https://github.com/Canopie-Club/canopie-client-themes.git", branch = "master" }
maud = "0.27.0"
regex = "1.12.2"
