[package]
name = "canopie-client-theme-{{THEME_ID}}"
version = "0.1.0"
edition = "{{YEAR}}"

[dependencies]
canopie-client-theme-base = { path = "../ALPHA" }
# canopie-client-theme-base = { git = "https://github.com/Canopie-Club/canopie-client-themes.git", branch = "master" }
maud = "0.27.0"
regex = "1.12.2"
